# SpaceGame

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
SpaceGame_tests/: CMakeLists.txt
SpaceGame_tests/basic_tests/: CMakeLists.txt  ModelTests.cpp  QuadTreeTests.cpp  SerializationTests.cpp  ViewTests.cpp  myTests.cpp
cmake/: FindPackageHandleStandardArgs.cmake  FindSDL2_mixer.cmake  FindXercesC.cmake  SelectLibraryConfigurations.cmake
configuration/: map.xml  map.xsd  sprites.txt  sprites.xml  sprites.xsd  test_map.xml
sdtTest_tests/: CMakeLists.txt
sdtTest_tests/basic_tests/: CMakeLists.txt  ModelTests.cpp  SerializationTests.cpp
src/: Dot.cpp  Dot.h  Geometry.cpp  Geometry.h  LTexture.cpp  Level.cpp  Level.h  Tile.cpp  Tile.h  main.cpp
src/Controller/: CameraController.cpp  CameraController.h  GameController.cpp  GameController.h
src/Model/: AI.h  Character.cpp  Character.h  Dot.cpp  Dot.h  Enemy.cpp  Enemy.h  EnemyAI.cpp  EnemyAI.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  HealthProperties.cpp  HealthProperties.h  Level.cpp  Level.h  Physical.cpp  Physical.h  PhysicalProperties.cpp  PhysicalProperties.h  Property.h  QuadTree.cpp  QuadTree.h  Tile.cpp  Tile.h  TileType.cpp  TileType.h  VisualProperties.cpp  VisualProperties.h
src/Serialization/: LevelLoader.cpp  LevelLoader.h  SpriteLoader.cpp  SpriteLoader.h  XmlDOMDocument.cpp  XmlDOMDocument.h  XmlDomErrorHandler.cpp  XmlDomErrorHandler.h
src/View/: CharacterRenderer.cpp  CharacterRenderer.h  CharacterRendererFactory.cpp  CharacterRendererFactory.h  CharacterSpriteRenderer.cpp  CharacterSpriteRenderer.h  Clip.cpp  Clip.h  GameObjectRenderer.cpp  GameObjectRenderer.h  GameObjectRendererFactory.cpp  GameObjectRendererFactory.h  GameTexture.cpp  GameTexture.h  LTexture.cpp  LTexture.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteRendererFactory.cpp  SpriteRendererFactory.h  SpriteRepository.cpp  SpriteRepository.h  SpriteSheet.cpp  SpriteSheet.h  TextureRepository.cpp  TextureRepository.h  TileRenderer.cpp  TileRenderer.h  TileRendererFactory.cpp  TileRendererFactory.h  TileSpriteRenderer.cpp  TileSpriteRenderer.h
